# ROIFT_GUI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  seed_gui_cpp.md  vcpkg.json
.devcontainer/: Dockerfile
docs/: architecture.md  linux_build.md  todo.md  usage.md  windows_build.md
scripts/: create_prebuilt.cmd  deploy_qt_runtime.cmd  restore_prebuilt.cmd
src/: ColorUtils.h  ExternalProcessRunner.cpp  ManualSeedSelector.cpp  ManualSeedSelector.cpp.bak  ManualSeedSelector.h  Mask3DView.cpp  Mask3DView.h  MaskOptionsDialog.cpp  MaskOptionsDialog.h  NiftiImage.cpp  NiftiImage.h  OrthogonalView.cpp  OrthogonalView.h  RangeSlider.cpp  RangeSlider.h  SeedOptionsDialog.cpp  SeedOptionsDialog.h  SegmentationRunner.cpp  SegmentationRunner.h  UiUtils.cpp  UiUtils.cpp.bak  UiUtils.h  UiUtils.h.bak  curldownload.cmake  itkdownload.cmake  main.cpp  qtdownload.cmake  zlibdownload.cmake
